--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "lerna run start",    
     "lint": "eslint packages --ext ts,tsx",
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "migrate:latest": "lerna run migrate:latest"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
