--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "lerna run start",    
     "lint": "eslint packages --ext ts,tsx",
     "bootstrap": "lerna bootstrap",
-    "migrate:latest": "lerna run migrate:latest"
+    "migrate:latest": "lerna run migrate:latest",
+    "seed:run": "lerna run seed:run"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
