feat(backend): add route to list items

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,1 +1,5 @@
-SERVER_PORT=
+# Port that the server is running, example: 3333
+SERVER_PORT= 
+
+# URL from URL that of the application backend, example: http://localhost:3333
+SERVER_URL=
