--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
-    "sqlite3": "^4.2.0"    
+    "multer": "^1.4.2",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.5",
     "nodemon": "^2.0.4",
     "sucrase": "^3.15.0"
   }
