--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -21,6 +21,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-constants": "^9.3.5",
     "expo-location": "^10.0.0",
+    "expo-mail-composer": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
