--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Alexandre <alexandre.monteiro.bec@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "lerna run start",    
+    "start": "lerna run start",
     "lint": "eslint packages --ext ts,tsx",
+    "test": "cross-env NOVE_ENV=test jest --runInBand",
     "bootstrap": "lerna bootstrap",
     "migrate:latest": "lerna run migrate:latest",
     "seed:run": "lerna run seed:run"
@@ -16,6 +17,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -26,9 +28,11 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.5",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "lint-staged": "^10.2.9",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.4.4",
     "typescript": "^3.9.5"
   }
 }
