--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,7 +22,9 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.5",
+    "@types/supertest": "^2.0.10",
     "nodemon": "^2.0.4",
-    "sucrase": "^3.15.0"
+    "sucrase": "^3.15.0",
+    "supertest": "^6.0.1"
   }
 }
